
####   Don't forget to change the version number in configure.ac!   ####

01 Nov 2004 Simplify ALRF integration in LASP (Suggested by RB) - Ivan Warren
15 Oct 2004 Apply CKD Shadow file update to FBA devices - Ivan Warren
14 Oct 2004 Resolved pointers to signed/unsigned types issues
            revealed by gcc 4.0 pre-release experiments - Ivan Warren
12 Oct 2004 Tweak cckd free space processing - Greg Smith
12 Oct 2004 Fix broken suspend/resume - Greg Smith
11 Oct 2004 Changed libgcrypt requirement to 1.1.90 or better - Ivan Warren
10 Oct 2004 Repaired some deprecated warnings dyncrypt.c - Bernard van der Helm
07 Oct 2004 OPTION_WAKEUP_SELECT_VIA_PIPE - Ivan Warren by Fish
05 Oct 2004 cr_mask.pat - Fix SIE intercept logic for LCTL - Greg Smith
05 Oct 2004 no_ffs.pat - Remove ffs ia32 assembler assist - Greg Smith
01 Oct 2004 Fix segfault when IPLing with IPL CPU offline - Ivan Warren
29 Sep 2004 Fix load/store multiple change (21 Sep 2004) to actually
            improve performance - Greg Smith
28 Sep 2004 Fix directive inside macro problem in tapecopy.c - Greg Smith
28 Sep 2004 Fix resume-suspend logic in channel.c - Greg Smith
28 Sep 2004 Added iplc (IPL Clear), sysreset (System reset) and
            sysclear (System reset clear) panel commands - Ivan Warren
26 Sep 2004 Fix segfault when multiple ckd files for dasd volume - Greg Smith
26 Sep 2004 Fix segfault when no cckd shadow file - Greg Smith
24 Sep 2004 Remove (most) int/ptr mismatch warnings for 64 bit machines
            tentative x86_64 support in autoconf
            prevent redefining "ffs" if built-in (for non-ia32) - Ivan Warren
24 Sep 2004 Tapecopy: progress msgs for external gui -- Fish
23 Sep 2004 Restore '-Wall -W' flags to gcc, Pass along CFLAGS to configure
            Eliminated all but 8 warnings -- Ivan Warren
22 Sep 2004 Fix tapecopy -- Fish
21 Sep 2004 cckd `sf-xxx force' command, cckd rewrite - Greg Smith
21 Sep 2004 Performance enhancement for multi-byte opcodes - Greg Smith