@@ -2316,6 +2316,10 @@ DEF_INST(load_fp_int_long_reg);
 DEF_INST(load_fp_int_short_reg);
 DEF_INST(loadlength_bfp_short_to_long_reg);
 DEF_INST(loadlength_bfp_short_to_long);
+DEF_INST(loadlength_bfp_long_to_ext_reg);
+DEF_INST(loadlength_bfp_long_to_ext);
+DEF_INST(loadlength_bfp_short_to_ext_reg);
+DEF_INST(loadlength_bfp_short_to_ext);
 DEF_INST(load_negative_bfp_ext_reg);
 DEF_INST(load_negative_bfp_long_reg);
 DEF_INST(load_negative_bfp_short_reg);
